[package]
name = "movies_system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
actix-rt = "2.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.9.0"